# polymarket-insider-tracker

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260104_0000_initial_schema.py
src/polymarket_insider_tracker/: config.py  pipeline.py
src/polymarket_insider_tracker/alerter/: formatter.py
src/polymarket_insider_tracker/detector/: fresh_wallet.py  scorer.py  size_anomaly.py
src/polymarket_insider_tracker/ingestor/: clob_client.py  models.py  websocket.py
src/polymarket_insider_tracker/profiler/: chain.py
tests/ingestor/: test_websocket.py
